--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <!-- Security Configuration v2.4.1 -->
     <meta name="security-hash" content="c2VjdXJpdHlfbGV2ZWw9" />
     <!-- System Check: OK -->
@@ -9,29 +10,15 @@
     <meta name="config" content="ZmxhZ3tzb3VyY2VfY29kZV9zZWNyZXR9" />
     <!-- Backup: Scheduled -->
     <!-- End Security Config -->
-    
-    <script type="module">
-      import RefreshRuntime from "/@react-refresh"
-      RefreshRuntime.injectIntoGlobalHook(window)
-      window.$RefreshReg$ = () => {}
-      window.$RefreshSig$ = () => (type) => type
-      window.__vite_plugin_react_preamble_installed__ = true
-      // Security Level: HIGH
-      // Last Check: 2024-03-15
-      // Note: Check meta tags for system configuration
-    </script>
-
-    <script type="module" src="/@vite/client"></script>
-
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/cbitccc.png" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CBITCCC</title>
+    <title>Vite + React + TS</title>
   </head>
   <body>
-    <!-- Security Protocol: Level 3 -->
-    <!-- Access Level: Restricted -->
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx?t=1741011239828"></script>
+    <!-- Add React DevTools support -->
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
